Refactor PaymentServiceImplTest to enhance payment processing tests and add verification methods
- Updated test methods for making payments, including validation for invalid amounts and successful payment creation.
- Introduced new tests for verifying payment signatures and handling exceptions.
- Improved setup method to initialize Razorpay client and test data.
- Removed unused test cases and added assertions for better coverage.

Add RedisServiceImplTest for Redis operations

- Created RedisServiceImplTest to cover Redis operations including get, set, and list functionalities.
- Added tests for handling Redis failures and serialization issues.
- Implemented helper methods for testing list operations.

Comment out unused tests in PromotionServiceImplTest and ReviewServiceImplTest

- Commented out tests that are not currently in use to clean up the test suite.

Update UserServiceImplTest to enhance user management tests

- Refactored user creation tests to include error handling for existing users and password hashing failures.
- Added tests for user retrieval from cache and database, ensuring proper caching behavior.
- Implemented tests for updating user profile photos and validating email verification OTPs.
- Enhanced exception handling tests for user not found scenarios.